<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Drive_Status_typ" Id="{df1aed99-8ed0-01fe-3cf1-a5a8d487ea44}">
    <Declaration><![CDATA[TYPE Drive_Status_typ :
STRUCT
	ActiveHW:				BOOL;	
	eUpdate_Staus:			enum_DriveUpdateStatus;	
	ParamVer:				UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>