<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="enumDriveType" Id="{1b080fd9-581c-0b39-1dc0-a81f1dd0c9ce}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE enumDriveType :
(
	eNoDrive := 0,
	eEL70xx,
	eEP70xx,
	eEL70xxExternFeedBack,
	eElmo,
	stepIM,
	eNidec,
	eIntegratedNidec,
	eIntegratedBeckhoff,
	e8xxxBeckhoff,
	e5xxxBeckhoff
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>