<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="enum_DriveUpdateStatus" Id="{35e6969b-9b62-0ede-2383-b031b185fddc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE enum_DriveUpdateStatus :
(
	NoAction:= 0,
	Checking,
	UpDating,
	Updated ,
	Error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>