<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="eElmoDriveParID" Id="{dcb6fd2b-9c66-001f-03e9-c37db79dc90b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eElmoDriveParID :
(
	RatedCurrent	:= 16#6075,
	RatedTorque		:= 16#6076,
	PCTRL_Kv := 16#6060 ,
	SCTRL_Kv := 16#6061 ,
	SCTRL_Tn := 16#6062 ,		
	Spare := 10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>